# ad-marketplace-analytics

./: Ad Marketplace Analytics.docx  DEVLOG.md  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.ipynb  ~$ Marketplace Analytics.docx
.github/workflows/: main.yml
data/: advertisers.csv  advertisers.parquet  daily_metrics.csv  daily_metrics.parquet
src/causal/: experiment_analysis.py
src/models/: churn_model.py
src/simulation/: advertiser_generator.py  auction.py  full_simulation.py  marketplace.py
