[project]
name = "ad-marketplace-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
    "xgboost>=3.1.2",
]
